--- a/index.html
+++ b/index.html
@@ -19,32 +19,34 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <article class="card">
-    <picture class="card__img">
-      <source srcset="images/image-product-desktop.jpg" media="(min-width:600px)">
-      <img src="./images/image-product-mobile.jpg" alt="Product">
-    </picture>
-    <div class="card__content">
-      <p class="card__tag">Perfume</p>
-      <h1 class="card__title">Gabrielle Essence Eau De Parfum</h1>
-      <p>
-        A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.
-      </p>
-      <div class="flex-group">
-        <p class="card__recent-price">
-          <span class="visually-hidden">Current price:</span>
-          $149.99
+  <main>
+    <article class="card">
+      <picture class="card__img">
+        <source srcset="images/image-product-desktop.jpg" media="(min-width:600px)">
+        <img src="./images/image-product-mobile.jpg" alt="Product">
+      </picture>
+      <div class="card__content">
+        <p class="card__tag">Perfume</p>
+        <h1 class="card__title">Gabrielle Essence Eau De Parfum</h1>
+        <p>
+          A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.
         </p>
-        <p class="card__old-price">
-          <span class="visually-hidden">Original price:</span>
-          <s>$169.99</s>
-        </p>
+        <div class="flex-group">
+          <p class="card__recent-price">
+            <span class="visually-hidden">Current price:</span>
+            $149.99
+          </p>
+          <p class="card__old-price">
+            <span class="visually-hidden">Original price:</span>
+            <s>$169.99</s>
+          </p>
+        </div>
+        <button class="button" data-icon="shopping-cart">
+          Add to Cart
+        </button>
       </div>
-      <button class="button" data-icon="shopping-cart">
-        Add to Cart
-      </button>
-    </div>
-  </article>
+    </article>
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Zitronensaft</a>.
