--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Zitronensaft</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/Zitronensaft" target="_blank">Zitronensaft</a>.
     </div>
   </footer>
 </body>
